
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct utsname {int * sysname; } ;


 int EXIT_FAILURE ;
 int _exit (int ) ;
 int checkerr (char*) ;
 char* malloc (int) ;
 int memcpy (char*,int *,int) ;
 int perror (char*) ;
 int puts (char*) ;
 int strlen (int *) ;
 scalar_t__ uname (struct utsname*) ;

char
*checksys(char *isvuln)
{
        struct utsname name;

        if(uname(&name) < 0) {
                puts("uname failed");
        }

        isvuln = malloc(6);
        if(!isvuln) {
                perror("malloc");
                _exit(EXIT_FAILURE);
        }

        if((name.sysname == ((void*)0)) || (strlen(name.sysname) < 1) || (strlen(name.sysname) > 5)) {
                checkerr(isvuln);
        }

        memcpy(isvuln, name.sysname, strlen(name.sysname));
        if(!isvuln) {
                checkerr(isvuln);
        }

        return(isvuln);
}
